task-03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: mohamedhassan
spec:
  ingressClassName: nginx
  rules:
  - host: subdomain.mohamedhassan.com
    http:
      paths:
       - path: /
         pathType: Prefix 
         backend:
          service:
            name: internal-service
            port:
              number: 80
